--- a/css/introducao.css
+++ b/css/introducao.css
@@ -61,11 +61,14 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 700px) {
     .introducao {
         grid-template-columns: 1fr;
+        padding: 30px 40px;
     }
     .introducao img {
-        display: none;
+        margin: 0 auto;
+        width: 200px;
+        height: 200px;
     }
 }
